# westerfeld_analyses

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflow/: deploy-docker-image.yaml
.github/workflows/: main.yml
docker/: Dockerfile  entrypoint.sh
westerfeld/: _preparation.py  _utils.py  beta_diversity.py  cooccurence.py  cooccurrence.py  ncm.py  ncm_result_analysis.py  ordination.py  taxa_prediction.py
westerfeld/graph/: comparison.py  creation.py  niche.py  settings.py  utils.py
westerfeld/graph/comparison/: kernels.py  utils.py
westerfeld/graph/creation/: correlation.py  inference.py  registry.py  utils.py
