[project]
name = "westerfeld-analyses"
version = "0.1.0"
description = "Accompanying repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grakel>=0.1.10",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]
